# evo-ipd

./: .gitignore  README.md  evo-ipd.cabal  flake.nix
app/: Main.hs
src/IPD/: Evolution.hs  Strategies.hs  Tournament.hs  Types.hs
